re-added parse_impala and updated annotation pipeline with snpeff e Please enter the commit message for your changes. Lines starting

--- a/add_annots/annotate_pipeline..ipynb
+++ b/add_annots/annotate_pipeline..ipynb
@@ -1,185 +1,193 @@
 {
- "worksheets": [
+ "cells": [
   {
-   "cells": [
-    {
-     "cell_type": "heading",
-     "metadata": {},
-     "level": 1,
-     "source": [
-      "Impala Annotation Pipeline"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "This pipeline begins with the existing table of distcinct variants found on impala and will be modified for adding new variants. "
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "metadata": {},
-     "level": 2,
-     "source": [
-      "Connect to Required Impala Tables"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      "from impala.dbapi import connect\n",
-      "from impala.util import as_pandas\n",
-      "import pandas as pd\n",
-      "import os\n",
-      "import ibis\n",
-      "import sh"
-     ],
-     "language": "python",
-     "prompt_number": 28
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      "hdfs_port = os.environ.get('glados20', 50070)\n",
-      "hdfs = ibis.hdfs_connect(host='glados20', port=hdfs_port)\n",
-      "con = ibis.impala.connect(host='glados19', port=21050, timeout=120,hdfs_client=hdfs)\n",
-      "\n",
-      "# enable interactive mode\n",
-      "ibis.options.interactive = True"
-     ],
-     "language": "python",
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      "# connect to tables TODO: add all tables later after running external programs\n",
-      "#clinvar = con.table('clinvar', database='p7_ref_grch37')\n",
-      "distinct_vars = con.table('distinct_test', database='users_selasady')"
-     ],
-     "language": "python",
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "heading",
-     "metadata": {},
-     "level": 2,
-     "source": [
-      "Split By Chromosome for Parallel Processing"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      "# TODO groupby chrom and parallel process \n",
-      "chr1 = distinct_vars[(distinct_vars['chrom'] == '1')]"
-     ],
-     "language": "python",
-     "prompt_number": 38
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      "for line in sh.tr(sh.tail(\"-f\", chr1, _piped=True), \"[:upper:]\", \"[:lower:]\", _iter=True):\n",
-      "    print(line)"
-     ],
-     "language": "python",
-     "prompt_number": 33
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "PandasError",
-       "evalue": "DataFrame constructor not properly called!",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-        "\u001b[0;31mPandasError\u001b[0m                               Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-41-0f32404d5038>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistinct_vars\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/pandas/core/frame.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    275\u001b[0m                                          copy=False)\n\u001b[1;32m    276\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 277\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mPandasError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DataFrame constructor not properly called!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m         \u001b[0mNDFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmgr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfastpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mPandasError\u001b[0m: DataFrame constructor not properly called!"
-       ]
-      }
-     ],
-     "input": [
-      "print chr1"
-     ],
-     "language": "python",
-     "prompt_number": 41
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      ""
-     ],
-     "language": "python"
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      ""
-     ],
-     "language": "python"
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "['1' '10' '11' '12' '13' '14' '15' '16' '17' '18' '19' '2' '20' '21' '22'\n '3' '4' '5' '6' '7' '8' '9' 'X' 'Y']\n"
-       ]
-      }
-     ],
-     "input": [
-      ""
-     ],
-     "language": "python",
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      ""
-     ],
-     "language": "python"
-    }
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Impala Annotation Pipeline"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This pipeline begins with the existing table of distcinct variants found on impala and will be modified for adding new variants. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Connect to Required Impala Tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from impala.dbapi import connect\n",
+    "from impala.util import as_pandas\n",
+    "import pandas as pd\n",
+    "import sys\n",
+    "sys.path.append('/Users/selasady/impala_scripts/parse_impala.py')\n",
+    "import time\n",
+    "import csv\n",
+    "import os\n",
+    "import subprocess as subp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pull down distinct variant table from imapala"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# query to left join nbs_annotated variants with DANN scores\n",
+    "distinct_query = \"\"\"\n",
+    "    SELECT DISTINCT * FROM users_selasady.distinct_test\n",
+    "    \"\"\"\n",
+    "# run query on impala\n",
+    "conn=connect(host='glados19', port=21050, timeout=120)\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(distinct_query)\n",
+    "\n",
+    "# store results as pandas data frame\n",
+    "distinct_df = as_pandas(cur)\n",
+    "cur.close()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save impala table as VCF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  chrom        pos ref alt           var_id\n",
+      "0    15   25207797   C   T  15:25207797:C:T\n",
+      "1    16    7162330   A   T   16:7162330:A:T\n",
+      "2     4  146853510   C   T  4:146853510:C:T\n",
+      "3    13   58314331   G   T  13:58314331:G:T\n",
+      "4     1  161484124   A   C  1:161484124:A:C\n"
+     ]
+    }
+   ],
+   "source": [
+    "# view table structure\n",
+    "print distinct_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# disable extraneous pandas warning\n",
+    "pd.options.mode.chained_assignment = None\n",
+    "\n",
+    "# create vcf header  \n",
+    "pimp.create_header('test.vcf')\n",
+    "\n",
+    "# crate vcf file\n",
+    "pimp.impala_to_vcf(distinct_df, 'test.vcf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run VCF Through SnpEff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Run VCF through SnpEff\n",
+    "def vcf_to_snpeff(input_vcf, snpeff_path, vcf_name, out_name):\n",
+    "    if os.path.exists(snpeff_path):\n",
+    "        # command to run snpeff\n",
+    "        snpeff_cmd = 'java -Xmx4g -jar {}  -t -v -noStats GRCh37.74 {} > {}_snpeff.vcf'.format(\n",
+    "            snpeff_path, vcf_name, out_name)\n",
+    "        # run snpeff on vcf file\n",
+    "        snpeff_process = subp.Popen(snpeff_cmd, shell=True)\n",
+    "        snpeff_process.wait()\n",
+    "    else:\n",
+    "        print \"Make sure you entered the correct path to snpEff.jar\"\n",
+    "\n",
+    "# path to snpeff jar\n",
+    "snpeff_path = '/Users/selasady/tools/snpEff/snpEff.jar'   \n",
+    "vcf_to_snpeff(distinct_df, snpeff_path, './test.vcf', 'annotated.vcf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert VCF to BED/BIM/FAM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
- "cells": [],
- "metadata": {},
- "nbformat": 3,
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.9"
+  }
+ },
+ "nbformat": 4,
  "nbformat_minor": 0
 }
