completed snpeff and gdv pipelines, need to fix snpeff impala table

--- a/annotation/admix.ipynb
+++ b/annotation/admix.ipynb
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create merged Q score file "
+    "### Create merged Q score file as csv"
    ]
   },
   {
@@ -452,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
