finished snpeff and global variants pipeline. added start of new nbs pipeline.

--- a/annotation/Global Distinct Variants.ipynb
+++ b/annotation/Global Distinct Variants.ipynb
@@ -19,7 +19,7 @@
     "    - Clinvar clinical significance rating\n",
     "    - Kaviar allele frequency\n",
     "    \n",
-    "To be added as available: \n",
+    "To be added when available: \n",
     "    - PFAM\n",
     "    - CADD"
    ]
@@ -44,12 +44,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Connect to Impala"
+    "### Connect to Impala with Ibis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hdfs: update 'user' argument. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -75,8 +82,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All reference sources containing variants were outer joined to compile a list of all variants found on impala. \n",
+    "\n",
+    "TODO: Variants from CGI and Illumina will be added after normalized files are available. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create connections to each needed table"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -92,8 +115,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Outer Join between Kaviar_ISB and ClinVar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " The Kaviar_ISB file and ClinVar files were joined, keeping all variants found in both tables, and Clinvar significance rating and explanation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -106,8 +143,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code above is equivalent to the following sql statment: "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print clin_exprs.compile()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +176,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print dbsnp_exprs.compile()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -139,8 +205,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Region-based annotations will be added to speed up downstream analysis and lookups. \n",
+    "\n",
+    "TODO: Add CADD and PFAM annotations when available. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -152,8 +227,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Connect to Regional Annotation Tables"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -194,7 +276,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save global variants to impala"
+    "### Preview Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  chrom       pos ref alt  kav_freq clin_sig clin_dbn rs_id  \\\n",
+      "0    15  62560626   T   C  0.001460     None     None  None   \n",
+      "1    15  62562863   T   G  0.000038     None     None  None   \n",
+      "2    15  62562863   T  TG  0.000038     None     None  None   \n",
+      "3    15  62562863  TG   T  0.000038     None     None  None   \n",
+      "4    15  62566380   T   G  0.000038     None     None  None   \n",
+      "\n",
+      "            dann_score       ens_gene       ens_geneid  \n",
+      "0  0.60789313687215341  RP11-299H22.5  ENSG00000260062  \n",
+      "1  0.17816605345991465  RP11-299H22.5  ENSG00000260062  \n",
+      "2                 None  RP11-299H22.5  ENSG00000260062  \n",
+      "3                 None  RP11-299H22.5  ENSG00000260062  \n",
+      "4  0.50747597957204360  RP11-299H22.6  ENSG00000261296  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print all_vars.limit(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save global variants as impala table"
    ]
   },
   {
@@ -242,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
