updating gv script

--- a/annotation/run_snpeff.ipynb
+++ b/annotation/run_snpeff.ipynb
@@ -34,7 +34,8 @@
     "- 1000 genomes hg37 reference fasta: ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/technical/reference/human_g1k_v37.fasta.gz  \n",
     "- Matching index file:  \n",
     "ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/technical/reference/human_g1k_v37.fasta.fai\n",
-    "- Mathching dict file (created using Picard tools) \n",
+    "- Mathching dict file (created using Picard tools)  \n",
+    "https://github.com/summerela/impala_scripts/blob/master/annotation/human_g1k_v37.dict\n",
     "- Ibis: 'pip install ibis-framework' "
    ]
   },
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -157,19 +158,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  CHROM        POS           ID    REF  ALT QUAL FILTER INFO FORMAT SUBJECT\n",
-      "0     3   57546032            .  TTTTG    T   30   PASS    .    GT:     ./.\n",
-      "1    22   24198658  rs569873759     AT    A   30   PASS    .    GT:     ./.\n",
-      "2     7   23811324            .      A    G   30   PASS    .    GT:     ./.\n",
-      "3    11    6703105            .      T    C   30   PASS    .    GT:     ./.\n",
-      "4     2   65313215            .      C  CAG   30   PASS    .    GT:     ./.\n",
-      "5     4  174244235            .      A   AT   30   PASS    .    GT:     ./.\n",
-      "6    19   46712364            .      G   GA   30   PASS    .    GT:     ./.\n",
-      "7     3  125874661            .  GCTGT    G   30   PASS    .    GT:     ./.\n",
-      "8    14   71689330            .      A    G   30   PASS    .    GT:     ./.\n",
-      "9    10   10100700            .      A    G   30   PASS    .    GT:     ./.\n",
+      "  CHROM        POS          ID     REF ALT QUAL FILTER INFO FORMAT SUBJECT\n",
+      "0     5  153767379  rs72357779      GC   G   30   PASS    .    GT:     ./.\n",
+      "2     9   39085040  rs10562418  TTAAAG   T   30   PASS    .    GT:     ./.\n",
+      "3    14   58738683   rs3830963       A  AT   30   PASS    .    GT:     ./.\n",
       "\n",
-      " Distinct rows = 53087\n"
+      " Distinct rows = 3\n"
      ]
     }
    ],
