--- a/annotation/global_distinct_variants.ipynb
+++ b/annotation/global_distinct_variants.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -375,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Add Regional Annotations"
+    "## Add Regional Annotations"
    ]
   },
   {
@@ -386,38 +386,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# create case statement to add DANN score depending on reference\n",
-    "dann_case = (ibis.case()\n",
-    "            .when(all_vars.alt == 'A', dann.score_a)\n",
-    "            .when(all_vars.alt == 'T', dann.score_t)\n",
-    "            .when(all_vars.alt == 'C', dann.score_c)\n",
-    "            .when(all_vars.alt == 'G', dann.score_g)\n",
-    "            .else_(ibis.NA)\n",
-    "            .end())    \n",
-    "\n",
-    "# create expression for coalescing common columns\n",
-    "dann_chrom = ibis.coalesce(all_vars.chrom, dann.chrom).name('chrom')\n",
-    "dann_pos = ibis.coalesce(all_vars.pos, dann.pos).cast('int32').name('pos')"
+    "### Add DANN scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# create empty table\n",
-    "# create table with variants and dann score annnoations for chromosome 1\n",
-    "\n",
+    "# create empty table to insert each chromosome into\n",
     "vars_dann_schema = ibis.schema([('chrom', 'string'), \n",
     "                                ('pos', 'int32'), \n",
     "                                ('ref', 'string'),\n",
@@ -436,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -448,20 +431,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
+    "# create case statement to add DANN score depending on reference\n",
+    "dann_case = (ibis.case()\n",
+    "            .when(all_vars.alt == 'A', dann.score_a)\n",
+    "            .when(all_vars.alt == 'T', dann.score_t)\n",
+    "            .when(all_vars.alt == 'C', dann.score_c)\n",
+    "            .when(all_vars.alt == 'G', dann.score_g)\n",
+    "            .else_(ibis.NA)\n",
+    "            .end())    \n",
     "\n",
+    "# create expression for coalescing common columns\n",
+    "dann_chrom = ibis.coalesce(all_vars.chrom, dann.chrom).name('chrom')\n",
+    "dann_pos = ibis.coalesce(all_vars.pos, dann.pos).cast('int32').name('pos')\n",
     "\n",
     "# append each chromosome to vars_dann table\n",
     "for x in chroms:\n",
     "    # create table with variants and dann score annnoations\n",
     "    dann_exp = [all_vars.chrom == x, dann.chrom == all_vars.chrom, all_vars.pos == dann.pos]\n",
-    "    con.insert('vars_dann', all_vars.join(dann, dann_exp)\n",
+    "    con.insert('vars_dann', all_vars.left_join(dann, dann_exp)\n",
     "               [dann_chrom, \n",
     "                dann_pos, \n",
     "                all_vars.ref, \n",
@@ -473,15 +467,52 @@
     "                all_vars.kav_source, \n",
     "                all_vars.dbsnp_build, \n",
     "                all_vars.var_type,                          \n",
-    "                dann_case.cast('float').name('dann_score')].distinct(), database='training')\n",
-    "\n"
+    "                dann_case.cast('float').name('dann_score')].distinct(), database='training')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add ensembl annotations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# create empty table to insert vars_dann + ensembl annotations into\n",
+    "vars_ens_schema = ibis.schema([('chrom', 'string'), \n",
+    "                                ('pos', 'int32'), \n",
+    "                                ('ref', 'string'),\n",
+    "                                ('alt', 'string'), \n",
+    "                                ('rs_id', 'string'), \n",
+    "                                ('clin_sig', 'string'),\n",
+    "                                ('clin_dbn', 'string'), \n",
+    "                                ('kav_freq', 'float'), \n",
+    "                                ('kav_source', 'string'),\n",
+    "                                ('dbsnp_build', 'string'), \n",
+    "                                ('var_type', 'string'), \n",
+    "                                ('dann_score', 'float'),\n",
+    "                                ('ens_gene', 'string'),\n",
+    "                                ('ens_geneid', 'string'),\n",
+    "                                ('strand', 'string'),\n",
+    "                                ('ens_start', 'int32'),\n",
+    "                                ('ens_stop', 'int32')\n",
+    "                              ])\n",
+    "\n",
+    "con.create_table('vars_ens', schema=vars_ens_schema, database='training')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -490,29 +521,128 @@
     "vars_dann.compute_stats()\n",
     "\n",
     "# create table with ensembl gene annotations\n",
-    "ensembl_exp = [vars_dann.chrom == ens.chrom, vars_dann.pos >= ens.start, \\\n",
+    "ensembl_exp = [vars_dann.chrom == x, ens.chrom == vars_dann.chrom, vars_dann.pos >= ens.start, \\\n",
     "               vars_dann.pos <= ens.stop]\n",
-    "vars_dann_ens = vars_dann.join(ens, ensembl_exp)[vars_dann, ens.gene_name.name('ens_gene')].distinct()\n",
     "\n",
-    "# create a table with variants, dann and ensembl annotations\n",
-    "con.create_table('vars_dann_ens', vars_dann_ens, database= 'training')"
+    "# create expression for coalescing common column\n",
+    "ens_chrom = ibis.coalesce(all_vars.chrom, ens.chrom).name('chrom')\n",
+    "\n",
+    "# append each chromosome to vars_ens table\n",
+    "for x in chroms:\n",
+    "    # create a table with variants, dann and ensembl annotations\n",
+    "    con.insert(vars_dann.left_join(ens, ensembl_exp)[\n",
+    "                ens_chrom,\n",
+    "                vars_dann.pos,\n",
+    "                vars_dann.ref, \n",
+    "                vars_dann.alt, \n",
+    "                vars_dann.rs_id, \n",
+    "                vars_dann.clin_sig, \n",
+    "                vars_dann.clin_dbn, \n",
+    "                vars_dann.kav_freq, \n",
+    "                vars_dann.kav_source, \n",
+    "                vars_dann.dbsnp_build, \n",
+    "                vars_dann.var_type,\n",
+    "                vars_dann.dann_score,\n",
+    "                ens.gene_name.name('ens_gene'),\n",
+    "                ens.gene_name.name('ens_gene'),\n",
+    "                ens.gene_id.name('ens_geneid'),\n",
+    "                ens.strand,\n",
+    "                ens.start.name('ens_start'),\n",
+    "                ens.stop.name('ens_stop')\n",
+    "                ].distinct()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add CADD, PFAM and interpro domain from dbNSFP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# create empty table to insert vars_ens + dbnsfp annotations into\n",
+    "vars_dbnsfp_schema = ibis.schema([('chrom', 'string'), \n",
+    "                                ('pos', 'int32'), \n",
+    "                                ('ref', 'string'),\n",
+    "                                ('alt', 'string'), \n",
+    "                                ('rs_id', 'string'), \n",
+    "                                ('clin_sig', 'string'),\n",
+    "                                ('clin_dbn', 'string'), \n",
+    "                                ('kav_freq', 'float'), \n",
+    "                                ('kav_source', 'string'),\n",
+    "                                ('dbsnp_build', 'string'), \n",
+    "                                ('var_type', 'string'), \n",
+    "                                ('dann_score', 'float'),\n",
+    "                                ('ens_gene', 'string'),\n",
+    "                                ('ens_geneid', 'string'),\n",
+    "                                ('strand', 'string'),\n",
+    "                                ('ens_start', 'int32'),\n",
+    "                                ('ens_stop', 'int32'),\n",
+    "                                ('sift_score', 'float'),\n",
+    "                                ('polyphen2_hdiv_score', 'float'),\n",
+    "                                ('polyphen2_hvar_score', 'float'),\n",
+    "                                ('cadd_raw', 'float'),\n",
+    "                                ('interpro_domain', 'string')\n",
+    "                              ])\n",
+    "\n",
+    "con.create_table('global_vars', schema=vars_dbnsfp_schema, database='training')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## working in this section, not complete ##\n",
+    "\n",
     "#  create a connection to variants with dann and ensembl annotations view \n",
-    "add_dbnsfp = con.table('vars_dann_ens', database = 'training')\n",
-    "add_dbnsfp.compute_stats()\n",
+    "vars_ens = con.table('vars_ens', database = 'training')\n",
+    "vars_ens.compute_stats()\n",
+    "\n",
+    "# create expression for coalescing common column\n",
+    "global_chrom = ibis.coalesce(vars_ens.chrom, ens.chrom).name('chrom')\n",
+    "global_pos = ibis.coalesce(vars_ens.pos, ens.pos).name('pos')\n",
+    "global_ref = ibis.coalesce(vars_ens.ref, ens.ref).name('ref')\n",
+    "global_pos = ibis.coalesce(vars_ens.alt, ens.alt).name('alt')\n",
+    "\n",
     "\n",
     "# add CADD and PFAM scores from dbNSFP table\n",
-    "dbnsfp_exp = [add_dbnsfp.chrom == dbnsfp_dist.chrom, add_dbnsfp.pos == dbnsfp_dist.pos, \\\n",
-    "              add_dbnsfp.ref == dbnsfp_dist.ref, add_dbnsfp.alt == dbnsfp_dist.alt]\n",
+    "dbnsfp_exp = [vars_ens.chrom = x, dbnsfp_dist.chrom == vars_ens.chrom, vars_ens.pos == vars_ens.pos, \\\n",
+    "              vars_ens.ref == dbnsfp_dist.ref, vars_ens.alt == dbnsfp_dist.alt]\n",
+    "\n",
+    "# append each chromosome to global_vars table\n",
+    "for x in chroms:\n",
+    "    # create a table with variants and all annotations\n",
+    "    con.insert(vars_dann.left_join(ens, ensembl_exp)[\n",
+    "                ens_chrom,\n",
+    "                vars_dann.pos,\n",
+    "                vars_dann.ref, \n",
+    "                vars_dann.alt, \n",
+    "                vars_dann.rs_id, \n",
+    "                vars_dann.clin_sig, \n",
+    "                vars_dann.clin_dbn, \n",
+    "                vars_dann.kav_freq, \n",
+    "                vars_dann.kav_source, \n",
+    "                vars_dann.dbsnp_build, \n",
+    "                vars_dann.var_type,\n",
+    "                vars_dann.dann_score,\n",
+    "                ens.gene_name.name('ens_gene'),\n",
+    "                ens.gene_name.name('ens_gene'),\n",
+    "                ens.gene_id.name('ens_geneid'),\n",
+    "                ens.strand,\n",
+    "                ens.start.name('ens_start'),\n",
+    "                ens.stop.name('ens_stop')\n",
+    "                ].distinct()\n",
     "\n",
     "global_vars = add_dbnsfp.join(dbnsfp_dist, dbnsfp_exp)[add_dbnsfp, dbnsfp_dist.sift_score,  \\\n",
     "                         dbnsfp_dist.polyphen2_hdiv_score, dbnsfp_dist.polyphen2_hvar_score, \\\n",
@@ -523,42 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save global variants as impala table"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table is too large to add snpeff annotations without first saving the table to impala. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "Operation is in ERROR_STATE",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-e3030f6ef2e8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcon\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_table\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'global_vars'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mglobal_vars\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdistinct\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdatabase\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'training'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\ibis\\impala\\client.pyc\u001b[0m in \u001b[0;36mcreate_table\u001b[1;34m(self, table_name, obj, schema, database, format, force, external, path, partition, like_parquet)\u001b[0m\n\u001b[0;32m    798\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mcom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIbisError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Must pass expr or schema'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    799\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 800\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_execute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstatement\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    801\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    802\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_write_dataframe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\ibis\\client.pyc\u001b[0m in \u001b[0;36m_execute\u001b[1;34m(self, query, results)\u001b[0m\n\u001b[0;32m    152\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    153\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_execute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresults\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 154\u001b[1;33m         \u001b[0mcur\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcon\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    155\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mresults\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    156\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mcur\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\ibis\\impala\\client.pyc\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, query, async)\u001b[0m\n\u001b[0;32m    114\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    115\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 116\u001b[1;33m             \u001b[0mcursor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0masync\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0masync\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    117\u001b[0m         \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    118\u001b[0m             \u001b[0mcursor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrelease\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\ibis\\impala\\client.pyc\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, stmt, async)\u001b[0m\n\u001b[0;32m    220\u001b[0m             \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    221\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 222\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_wait_synchronous\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    223\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    224\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_wait_synchronous\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\ibis\\impala\\client.pyc\u001b[0m in \u001b[0;36m_wait_synchronous\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    244\u001b[0m                 \u001b[0mstate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhs2_cursor_status\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcur\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    245\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_op_state_is_error\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 246\u001b[1;33m                     \u001b[1;32mraise\u001b[0m \u001b[0mOperationalError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Operation is in ERROR_STATE\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    247\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcur\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_op_state_is_executing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    248\u001b[0m                     \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOperationalError\u001b[0m: Operation is in ERROR_STATE"
-     ]
-    }
-   ],
-   "source": [
-    "con.create_table('global_vars', global_vars.distinct(), database='training')"
+    "## Clean up temp tables"
    ]
   },
   {
