updating global vars script

--- a/annotation/global_distinct_variants.ipynb
+++ b/annotation/global_distinct_variants.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -419,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# create string of chromosomes in the data set\n",
-    "chroms = all_vars.chrom.distinct().execute()"
+    "chroms = all_vars.chrom.distinct().execute().sort_values()"
    ]
   },
   {
