updated unit testing to accept user variables and dynamically grab position information for testing rsID for hg19

--- a/annotation/admix.ipynb
+++ b/annotation/admix.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Run ADMIXTURE"
    ]
@@ -18,9 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Convert VCF to PED/MAP Plink format"
    ]
@@ -29,26 +25,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Admixture requires PED/MAP files from Plink format as input. Requires: \n",
-    "    - PLINK 1.9: https://www.cog-genomics.org/plink2\n",
-    "    - The following Plink arguments are required: \n",
-    "        - recode 12 : codes major/minor alleles as 0,1 and 2\n",
-    "        - geno 0.1 : ignores entries with missing genotypes (will cause admixture error)\n",
-    "    - The following Plink arguments are optional:\n",
-    "        --no-fid = No family Id provided\n",
-    "        --no-parents  = No parent info provided\n",
-    "        --no-sex  = No sex info provided\n",
-    "        --no-pheno  = No phenotype info provided\n",
-    "        --double-id = Use subject ID as family ID since none is provided\n",
+    "Admixture requires PED/MAP files from Plink format as input. \n",
+    "\n",
+    "Requires:   \n",
+    "    - PLINK 1.9: https://www.cog-genomics.org/plink2   \n",
+    "    - The following Plink arguments are required:   \n",
+    "        - recode 12 : codes major/minor alleles as 0,1 and 2  \n",
+    "        - geno 0.1 : ignores entries with missing genotypes (will cause admixture error)  \n",
+    "    - The following Plink arguments are optional:  \n",
+    "         -no-fid = No family Id provided  \n",
+    "         -no-parents  = No parent info provided  \n",
+    "         -no-sex  = No sex info provided  \n",
+    "         -no-pheno  = No phenotype info provided  \n",
+    "         -double-id = Use subject ID as family ID since none is provided  \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 212,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# set working directory\n",
@@ -66,9 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -100,7 +94,10 @@
     }
    ],
    "source": [
-    "!for f in *.vcf.gz; do /Users/summerrae/tools/plink --vcf $f -recode 12 --out ${f%%.*} --memory 30000 --threads 8 --no-fid --no-parents --no-sex --no-pheno --double-id --geno 0.1; done"
+    "!for f in *.vcf.gz; do /Users/summerrae/tools/plink --vcf $f -recode 12 --out ${f%%.*} --memory 30000 --threads 8 --no-fid --no-parents --no-sex --no-pheno --double-id --geno 0.1; done\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -123,9 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -242,9 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!for f in *.Q; do sed -i.q2 \"s/$/\\ ${f%%.*}/\" $f; done"
@@ -269,9 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!cat *.Q | sed 's/ /\\,/g' >> master_admix.csv"
@@ -287,9 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# read in master_admix.txt as pandas table\n",
@@ -306,9 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import ibis\n",
@@ -333,9 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -351,8 +336,8 @@
       ]
      },
      "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "metadata": {}
     }
    ],
    "source": [
@@ -374,9 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define talbe schema for tsv file\n",
@@ -408,9 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# join tables to get sample_id\n",
@@ -427,9 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "con.create_table('admix_test', joined, database='users_selasady')"
@@ -445,7 +424,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
