--- a/annotation/Testing.ipynb
+++ b/annotation/Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
     "import csv\n",
     "\n",
     "for file in os.listdir(os.getcwd()):\n",
-    "    if file.endswith('intergenic_snpeff.vcf'):\n",
+    "    if file.endswith('intergenic_verified_snpeff.vcf'):\n",
     "        print \"Parsing snpeff output for {}... \\n\".format(file)\n",
     "        # create command to parse snpeff\n",
     "        df = pd.read_csv(file, sep='\\t', skiprows=3, usecols=['#CHROM', 'POS', 'ID', 'REF', 'ALT', 'INFO'])\n",
