--- a/annotation/admix.ipynb
+++ b/annotation/admix.ipynb
@@ -44,11 +44,11 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -60,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -91,9 +93,7 @@
      ]
     }
    ],
-   "source": [
-    ""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -115,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -232,7 +234,9 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!for f in *.Q; do sed -i.q2 \"s/$/\\ ${f%%.*}/\" $f; done"
@@ -257,7 +261,9 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!cat *.Q | sed 's/ /\\,/g' >> master_admix.csv"
@@ -273,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# read in master_admix.txt as pandas table\n",
@@ -290,7 +298,9 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import ibis\n",
@@ -315,7 +325,9 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -331,8 +343,8 @@
       ]
      },
      "execution_count": 199,
-     "output_type": "execute_result",
-     "metadata": {}
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -354,7 +366,9 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# define talbe schema for tsv file\n",
@@ -386,7 +400,9 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# join tables to get sample_id\n",
@@ -403,7 +419,9 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "con.create_table('admix_test', joined, database='users_selasady')"
@@ -412,21 +430,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
